<resources>
    <string name="app_name">Weather App</string>
    <string name="lbl_city_hint">City (i.e. Charlotte)</string>
    <string name="lbl_country_hint">Country (i.e. US)</string>
    <string name="lbl_submit">Search</string>

    <string name="app_name_city_weather">City Weather</string>
    <string name="lbl_hourly_data">Hourly Data</string>
    <string name="lbl_daily_forecast">Daily Forecast for</string>
    <string name="lbl_loading">Loading Data</string>
    <string name="lbl_saved_cities">Saved Cities</string>

    <string name="lbl_three_hour_forecast">Three Hourly Forecast on</string>
    <string name="lbl_no_saved_cities">There are no cities to display.  Search the city from the search box and save.</string>

    <string name="lbl_api_error">No cities match your search query</string>

    <string name="lbl_temp">Temperature:</string>
    <string name="lbl_condition">Condition:</string>
    <string name="lbl_pressure">Pressure:</string>
    <string name="lbl_humidity">Humidity</string>
    <string name="lbl_wind">Wind:</string>

    <string name="lbl_settings">Settings</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_unit">Temperature Unit</string>
    <string name="lbl_unit_detailed">Choose between celsius and Fahrenheit</string>
    <string name="lbl_toast_unit_changed">Temperature Unit has been changed to</string>

    <string name="lbl_updated_on">Updated on:</string>
</resources>