<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_city_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw6.CityWeatherActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewWeatherTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/lbl_daily_forecast"/>



    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWeatherTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/recyclerBasicWeather"/>

    <TextView
        android:text="@string/lbl_three_hour_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerBasicWeather"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewForecast"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_dark"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/recyclerBasicWeather"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/recyclerDetailedWeather"
        android:layout_above="@+id/buttonSave"/>

    <Button
        android:text="@string/lbl_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAllCaps="false"/>

    <Button
        android:text="@string/lbl_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSettings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"/>

</RelativeLayout>
