<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHumidity"
        android:layout_below="@+id/textViewPressure"
        android:layout_alignLeft="@+id/textViewPressure"
        android:layout_alignStart="@+id/textViewPressure"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCondition"
        android:layout_alignLeft="@+id/textViewCondition"
        android:layout_alignStart="@+id/textViewCondition"
        android:layout_marginTop="5dp"
        android:id="@+id/textViewPressure"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textViewTemp"
        android:layout_alignStart="@+id/textViewTemp"
        android:id="@+id/textViewCondition"/>

    <TextView
        android:text="Hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textViewHour"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="16dp"
        android:id="@+id/imageViewIcon"
        android:layout_below="@+id/textViewHour"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/lbl_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewIcon"
        android:layout_toLeftOf="@+id/imageViewIcon"
        android:layout_toStartOf="@+id/imageViewIcon"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:id="@+id/textView2"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/textViewHour"
        android:layout_toEndOf="@+id/textViewHour"
        android:id="@+id/textViewTemp"/>

    <TextView
        android:text="@string/lbl_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/lbl_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView7"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/lbl_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:id="@+id/textView10"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="@string/lbl_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="5dp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewWind"
        android:layout_below="@+id/textViewHumidity"
        android:layout_alignLeft="@+id/textViewHumidity"
        android:layout_alignStart="@+id/textViewHumidity"
        android:layout_marginTop="5dp"/>

</RelativeLayout>